--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Circular Image Placeholder -->
       <div class="hero-circle">
         <img 
-          src="/images/coverfinal.jpg" 
+          src="https://github.com/RTIHN/doiani/blob/main/images/coverfinal.jfif" 
           alt="Noi doi" 
         />
       </div>
