--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
       <h2>Amintiri De Neuitat</h2>
       <div class="photo-grid">
         <figure>
-          <img src="/images/img1.jpg" alt="Noi doi în primul an" />
+          <img src="https://github.com/RTIHN/doiani/blob/main/images/img1.jpg?raw=true" alt="Noi doi în primul an" />
           <figcaption>Plimbare romantică cu barca</figcaption>
         </figure>
         <figure>
-          <img src="/images/img2.jpg" alt="Noi doi în al doilea an" />
+          <img src="https://github.com/RTIHN/doiani/blob/main/images/img2.jpg?raw=true" alt="Noi doi în al doilea an" />
           <figcaption>Vizita la Peleș</figcaption>
         </figure>
         <figure>
-          <img src="/images/img3.jpg" alt="Moment special" />
+          <img src="https://github.com/RTIHN/doiani/blob/main/images/img3.jpg?raw=true" alt="Moment special" />
           <figcaption>Rupt de picioare pe pârtie</figcaption>
         </figure>
       </div>
@@ -86,15 +86,15 @@
     <section id="galerie" class="galerie">
       <div class="photo-grid">
         <figure>
-          <img src="/images/img4.jfif" alt="Noi doi în primul an" />
+          <img src="https://raw.githubusercontent.com/RTIHN/doiani/refs/heads/main/images/img4.jfif" alt="Noi doi în primul an" />
           <figcaption>Pirat sau supă la plic?</figcaption>
         </figure>
         <figure>
-          <img src="/images/img5.jfif" alt="Noi doi în al doilea an" />
+          <img src="https://raw.githubusercontent.com/RTIHN/doiani/refs/heads/main/images/img5.jfif" alt="Noi doi în al doilea an" />
           <figcaption>Amintiri vechi la Vama Veche</figcaption>
         </figure>
         <figure>
-          <img src="/images/img6.jfif" alt="Moment special" />
+          <img src="https://raw.githubusercontent.com/RTIHN/doiani/refs/heads/main/images/img6.jfif" alt="Moment special" />
           <figcaption>Eminescu și Veronica</figcaption>
         </figure>
       </div>
@@ -106,15 +106,15 @@
     <section id="galerie" class="galerie">
       <div class="photo-grid">
         <figure>
-          <img src="/images/img7.jfif" alt="Noi doi în primul an" />
+          <img src="https://raw.githubusercontent.com/RTIHN/doiani/refs/heads/main/images/img7.jfif" alt="Noi doi în primul an" />
           <figcaption>Puțin mai japonez</figcaption>
         </figure>
         <figure>
-          <img src="/images/img8.jpg" alt="Noi doi în al doilea an" />
+          <img src="https://github.com/RTIHN/doiani/blob/main/images/img8.jpg?raw=true" alt="Noi doi în al doilea an" />
           <figcaption>După ziua asta am făcut amândoi toxinfectie</figcaption>
         </figure>
         <figure>
-          <img src="/images/img9.jfif" alt="Moment special" />
+          <img src="https://raw.githubusercontent.com/RTIHN/doiani/refs/heads/main/images/img9.jfif" alt="Moment special" />
           <figcaption>Cea mai stresantă zi din viața mea</figcaption>
         </figure>
       </div>
